--- a/app/src/main/res/drawable/ic_down_arrow.xml
+++ b/app/src/main/res/drawable/ic_down_arrow.xml
@@ -1,4 +1,27 @@
-<vector android:height="14dp" android:viewportHeight="490.0"
-    android:viewportWidth="490.0" android:width="14dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ff0000" android:pathData="M437.2,178.7c12.8,12.8 12.8,33.4 0,46.2c-6.4,6.4 -14.7,9.6 -23.1,9.6s-16.7,-3.2 -23.1,-9.6L277.7,111.5v345.8c0,18 -14.6,32.7 -32.7,32.7s-32.7,-14.6 -32.7,-32.7V111.5L99,224.9c-12.8,12.8 -33.4,12.8 -46.2,0s-12.8,-33.4 0,-46.2L221.9,9.6C228,3.4 236.3,0 245,0c8.7,0 17,3.4 23.1,9.6L437.2,178.7z"/>
+<!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="14dp"
+    android:height="14dp"
+    android:viewportHeight="490.0"
+    android:viewportWidth="490.0">
+    <path
+        android:fillColor="#ff0000"
+        android:pathData="M437.2,178.7c12.8,12.8 12.8,33.4 0,46.2c-6.4,6.4 -14.7,9.6 -23.1,9.6s-16.7,-3.2 -23.1,-9.6L277.7,111.5v345.8c0,18 -14.6,32.7 -32.7,32.7s-32.7,-14.6 -32.7,-32.7V111.5L99,224.9c-12.8,12.8 -33.4,12.8 -46.2,0s-12.8,-33.4 0,-46.2L221.9,9.6C228,3.4 236.3,0 245,0c8.7,0 17,3.4 23.1,9.6L437.2,178.7z" />
 </vector>
