--- a/app/src/main/res/drawable/ic_is_agriculture.xml
+++ b/app/src/main/res/drawable/ic_is_agriculture.xml
@@ -1,11 +1,48 @@
-<vector android:height="48dp" android:viewportHeight="512.002"
-    android:viewportWidth="512.002" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#E0E0E0" android:pathData="M512,213.3c0,-90.5 -52.6,-165.2 -132.4,-195.6c35,33.9 53,79.9 53,133.8c0,102.4 -79,185.4 -176.6,185.4c-40.9,0 -78.4,-14.7 -108.3,-39.2l-27.3,27.3C157.8,385 224.2,425.1 300.1,425.1C417.1,425.1 512,330.3 512,213.3"/>
-    <path android:fillColor="#9E5A23" android:pathData="M120.4,325L6.8,437.6c-9,9 -9,23.7 0,32.7l17.2,17.2c9,9 23.7,9 32.7,0L167.3,378C148.9,363.1 133,345.2 120.4,325"/>
-    <path android:fillColor="#6D3C17" android:pathData="M103.3,403.5c-3.5,3.5 -9,3.5 -12.5,0c-3.5,-3.5 -3.5,-9 0,-12.5c3.4,-3.5 9,-3.5 12.5,0C106.8,394.4 106.8,400 103.3,403.5"/>
-    <path android:fillColor="#6D3C17" android:pathData="M76.9,430c-3.5,3.5 -9,3.5 -12.5,0c-3.5,-3.5 -3.5,-9 0,-12.5c3.4,-3.5 9,-3.5 12.5,0C80.3,420.9 80.3,426.5 76.9,430"/>
-    <path android:fillColor="#6D3C17" android:pathData="M44.1,459c-4.9,0 -8.8,-4 -8.8,-8.8s4,-8.8 8.8,-8.8s8.8,4 8.8,8.8S49,459 44.1,459"/>
-    <path android:fillColor="#A3AAAF" android:pathData="M350.5,310l23.3,23.2c1.7,1.7 4,2.6 6.2,2.6c2.3,0 4.5,-0.9 6.2,-2.6c3.4,-3.4 3.4,-9 0,-12.5l-22.6,-22.6c-4.5,3.7 -9.3,7.1 -14.1,10.3C349.8,309 350,309.6 350.5,310"/>
-    <path android:fillColor="#A3AAAF" android:pathData="M316.8,329.3l21.3,21.3c1.7,1.7 4,2.6 6.2,2.6c2.3,0 4.5,-0.9 6.2,-2.6c3.5,-3.4 3.5,-9 0,-12.5l-19.1,-19.1c-5.4,2.7 -10.9,5.1 -16.6,7.2C315.2,327.2 315.9,328.3 316.8,329.3"/>
-    <path android:fillColor="#A3AAAF" android:pathData="M310.8,363.8c3.5,-3.5 3.5,-9 0,-12.5l-18.4,-18.4c-6.3,1.4 -12.6,2.4 -19.1,3.1c0.2,1.9 0.9,3.7 2.4,5.2l22.7,22.7c1.7,1.7 4,2.6 6.2,2.6C306.8,366.3 309.1,365.5 310.8,363.8"/>
+<!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportHeight="512.002"
+    android:viewportWidth="512.002">
+    <path
+        android:fillColor="#E0E0E0"
+        android:pathData="M512,213.3c0,-90.5 -52.6,-165.2 -132.4,-195.6c35,33.9 53,79.9 53,133.8c0,102.4 -79,185.4 -176.6,185.4c-40.9,0 -78.4,-14.7 -108.3,-39.2l-27.3,27.3C157.8,385 224.2,425.1 300.1,425.1C417.1,425.1 512,330.3 512,213.3" />
+    <path
+        android:fillColor="#9E5A23"
+        android:pathData="M120.4,325L6.8,437.6c-9,9 -9,23.7 0,32.7l17.2,17.2c9,9 23.7,9 32.7,0L167.3,378C148.9,363.1 133,345.2 120.4,325" />
+    <path
+        android:fillColor="#6D3C17"
+        android:pathData="M103.3,403.5c-3.5,3.5 -9,3.5 -12.5,0c-3.5,-3.5 -3.5,-9 0,-12.5c3.4,-3.5 9,-3.5 12.5,0C106.8,394.4 106.8,400 103.3,403.5" />
+    <path
+        android:fillColor="#6D3C17"
+        android:pathData="M76.9,430c-3.5,3.5 -9,3.5 -12.5,0c-3.5,-3.5 -3.5,-9 0,-12.5c3.4,-3.5 9,-3.5 12.5,0C80.3,420.9 80.3,426.5 76.9,430" />
+    <path
+        android:fillColor="#6D3C17"
+        android:pathData="M44.1,459c-4.9,0 -8.8,-4 -8.8,-8.8s4,-8.8 8.8,-8.8s8.8,4 8.8,8.8S49,459 44.1,459" />
+    <path
+        android:fillColor="#A3AAAF"
+        android:pathData="M350.5,310l23.3,23.2c1.7,1.7 4,2.6 6.2,2.6c2.3,0 4.5,-0.9 6.2,-2.6c3.4,-3.4 3.4,-9 0,-12.5l-22.6,-22.6c-4.5,3.7 -9.3,7.1 -14.1,10.3C349.8,309 350,309.6 350.5,310" />
+    <path
+        android:fillColor="#A3AAAF"
+        android:pathData="M316.8,329.3l21.3,21.3c1.7,1.7 4,2.6 6.2,2.6c2.3,0 4.5,-0.9 6.2,-2.6c3.5,-3.4 3.5,-9 0,-12.5l-19.1,-19.1c-5.4,2.7 -10.9,5.1 -16.6,7.2C315.2,327.2 315.9,328.3 316.8,329.3" />
+    <path
+        android:fillColor="#A3AAAF"
+        android:pathData="M310.8,363.8c3.5,-3.5 3.5,-9 0,-12.5l-18.4,-18.4c-6.3,1.4 -12.6,2.4 -19.1,3.1c0.2,1.9 0.9,3.7 2.4,5.2l22.7,22.7c1.7,1.7 4,2.6 6.2,2.6C306.8,366.3 309.1,365.5 310.8,363.8" />
 </vector>
