--- a/app/src/main/res/drawable/ic_is_poultary.xml
+++ b/app/src/main/res/drawable/ic_is_poultary.xml
@@ -1,21 +1,78 @@
-<vector android:height="48dp" android:viewportHeight="511.999"
-    android:viewportWidth="511.999" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF5845" android:pathData="M386.7,61.5c0,0 41.2,-44.5 -8.3,-52.5C318.8,-0.6 262.6,51.6 286.5,91.7C286.5,91.7 332.5,48.1 386.7,61.5z"/>
-    <path android:fillColor="#E1E9F2" android:pathData="M141.8,284.2L114.3,157.5c-0.2,-0.9 -1.1,-1.5 -2,-1.3l0,0c-31.5,6.8 -51.4,37.9 -44.6,69.4l15.5,71.3L141.8,284.2z"/>
-    <path android:fillColor="#B3D2F2" android:pathData="M88.7,225.6c-5,-23.2 4.5,-46.2 22.5,-59.4c2.6,-1.9 3.9,-5.2 3.2,-8.4l-0.1,-0.3c-0.2,-0.9 -1.1,-1.5 -2,-1.3l0,0c-31.5,6.8 -51.4,37.9 -44.6,69.4l15.5,71.3l20,-4.3L88.7,225.6z"/>
-    <path android:fillColor="#E1E9F2" android:pathData="M396.2,245.1v25.3c0,86.2 -69.8,156.1 -156,156.1S84.2,356.6 84.2,270.4c0,-7 2.8,-13.3 7.4,-17.9c4.6,-4.6 10.9,-7.4 17.9,-7.4h117.5l59.5,-153.4c11.1,-27.6 37.9,-45.7 67.7,-45.7c11.6,0 22.1,4.7 29.7,12.3c7.6,7.6 12.3,18.1 12.3,29.7v157.1L396.2,245.1L396.2,245.1z"/>
-    <path android:fillColor="#B3D2F2" android:pathData="M308.6,91.7c9.5,-23.6 30.5,-40.3 55.1,-44.6c-3.1,-0.7 -6.3,-1.1 -9.5,-1.1c-29.8,0 -56.5,18.1 -67.7,45.7l-59.5,153.4h22.1L308.6,91.7z"/>
-    <path android:fillColor="#B3D2F2" android:pathData="M106.3,270.4c0,-7 2.8,-13.3 7.4,-17.9c4.6,-4.6 10.9,-7.4 17.9,-7.4h-22.1c-7,0 -13.3,2.8 -17.9,7.4c-4.6,4.6 -7.4,10.9 -7.4,17.9c0,86.2 69.8,156.1 156,156.1c3.7,0 7.4,-0.1 11.1,-0.4C170.2,420.4 106.3,352.9 106.3,270.4z"/>
-    <path android:fillColor="#F2E5CB" android:pathData="M396.2,101.9l63,21.3l-63.1,19.5z"/>
-    <path android:fillColor="#D44637" android:pathData="M433.6,131.2v27.9c0,20.7 -16.8,37.5 -37.5,37.5l0,0v-53.8L433.6,131.2z"/>
-    <path android:fillColor="#F2E5CB" android:pathData="M300.6,504.2H194.3c-2.8,0 -5.1,-2.3 -5.1,-5.1v-59.8h26.9v35.1c0,2.8 2.3,5.1 5.1,5.1h63.3c11.3,0 20.4,9.1 20.4,20.4l0,0C304.9,502.2 303,504.2 300.6,504.2z"/>
-    <path android:fillColor="#E1E9F2" android:pathData="M174,410.8l5.5,39.7c0.3,2.5 2.5,4.4 5.1,4.4h38.6c2.6,0 4.8,-1.9 5.1,-4.5l4.9,-40.1c2.2,-17.8 -11.7,-33.5 -29.6,-33.5l0,0C185.5,376.9 171.6,392.8 174,410.8z"/>
-    <path android:fillColor="#B3D2F2" android:pathData="M200.4,450.5l-5.5,-39.7c-2,-14.3 6.5,-27.3 19.1,-32c-3.2,-1.2 -6.8,-1.9 -10.4,-1.9l0,0c-18.1,0 -32,16 -29.5,33.9l5.5,39.7c0.3,2.5 2.5,4.4 5.1,4.4h20.9C202.9,454.9 200.7,453 200.4,450.5z"/>
-    <path android:fillColor="#E1E9F2" android:pathData="M300.3,245.1c14,0 25.3,11.3 25.3,25.3l0,0c0,36 -12.2,69.2 -32.7,95.6c-16.1,20.8 -40.9,32.9 -67.2,32.9h-54.8c-14.4,0 -26.1,-11.7 -26.1,-26.1v-16.5h-21.1c-14.4,0 -26,-11.7 -26,-26.1v-29.2H78.8c-14.4,0 -26.1,-11.7 -26.1,-26.1v-29.9L300.3,245.1L300.3,245.1z"/>
-    <path android:fillColor="#B3D2F2" android:pathData="M118,330.2v-29.2H99.2c-14.4,0 -26.1,-11.7 -26.1,-26.1v-29.9H52.8v29.9c0,14.4 11.7,26.1 26.1,26.1h18.8v29.2c0,14.4 11.7,26.1 26,26.1h20.4C129.7,356.3 118,344.6 118,330.2z"/>
-    <path android:fillColor="#B3D2F2" android:pathData="M165.2,372.8v-16.5h-20.4v16.5c0,14.4 11.7,26.1 26.1,26.1h20.4C176.8,398.8 165.2,387.2 165.2,372.8z"/>
-    <path android:fillColor="#FF000000" android:pathData="M396.2,248.2c-4.3,0 -7.8,3.5 -7.8,7.8v14.4c0,41.5 -17.6,81.5 -48.3,109.5c-3.2,2.9 -3.4,7.9 -0.5,11.1c1.5,1.7 3.7,2.6 5.8,2.6c1.9,0 3.8,-0.7 5.3,-2.1c33.9,-31 53.4,-75.1 53.4,-121.1v-14.4C404,251.7 400.5,248.2 396.2,248.2z"/>
-    <path android:fillColor="#FF000000" android:pathData="M461.7,115.8l-57.8,-19.5v-8.3c0,-9.4 -2.6,-18.3 -7.4,-26.1c6.6,-8.5 17.9,-25.9 12.7,-41.1c-3.6,-10.4 -13.5,-16.9 -29.6,-19.5c-18.8,-3 -38.3,-0.6 -56.3,7.2c-16.7,7.2 -30.9,18.4 -39.9,31.7c-11.6,17.1 -13.6,35.9 -5.5,52.1l-10.6,27.3c-1.6,4 0.4,8.6 4.5,10.1c4,1.6 8.6,-0.4 10.1,-4.5l11.9,-30.5c10,-24.8 33.7,-40.8 60.4,-40.8c9.1,0 17.7,3.5 24.1,10c0.8,0.8 1.5,1.6 2.2,2.4c0.1,0.1 0.2,0.3 0.3,0.4c4.8,6 7.5,13.5 7.5,21.3v53.7l-0,1.1c0,0 0,0 0,0c0,0 0,0 0,0v53.8c0,0 0,0 0,0v18.6c0,4.3 3.5,7.8 7.8,7.8c4.3,0 7.8,-3.5 7.8,-7.8v-11.5c21.3,-3.7 37.5,-22.3 37.5,-44.6v-22.1l20.1,-6.2c3.2,-1 5.5,-4 5.5,-7.4C467.1,120 465,116.9 461.7,115.8zM433.8,122.9l-2.5,0.8c0,0 -0,0 -0,0l-27.3,8.4l0,-19.3L433.8,122.9zM354.2,38.2c-26.4,0 -50.5,12.7 -65.5,33.4c0,-9.5 4.3,-17.7 7.7,-22.7c13.7,-20.2 45.9,-37.8 80.7,-32.2c6.8,1.1 15.4,3.6 17.3,9.2c2.2,6.3 -3.1,16.5 -8.4,23.9C377.1,42.3 365.9,38.2 354.2,38.2zM425.8,159.1c0,13.6 -9.3,25.2 -21.8,28.6v-39.2l21.8,-6.7V159.1z"/>
-    <path android:fillColor="#FF000000" android:pathData="M363.6,94.4m-7.8,0a7.8,7.8 0,1 1,15.7 0a7.8,7.8 0,1 1,-15.7 0"/>
-    <path android:fillColor="#FF000000" android:pathData="M299,370.8c22.4,-28.9 34.3,-63.7 34.3,-100.4c0,-18.3 -14.8,-33.1 -33.1,-33.1h-61.8l28.7,-73.8c1.6,-4 -0.4,-8.6 -4.5,-10.1c-4,-1.6 -8.6,0.4 -10.1,4.5l-30.9,79.5h-81.9l-18.1,-83c-0.9,-4.2 -5.1,-6.9 -9.3,-6l-1.6,0.3c-35.6,7.8 -58.3,43.1 -50.6,78.7l2.2,10h-9.5c-4.3,0 -7.8,3.5 -7.8,7.8v29.9c0,18.7 15.2,33.9 33.9,33.9h2.1c2.3,9.7 5.5,19.1 9.6,28.2c1.3,6.1 4.2,11.6 8.3,16.1c16.2,27.6 39.7,49.6 68.2,63.9l4.8,34.5c0.7,5.3 4.6,9.5 9.6,10.8v36.7c0,7.1 5.8,13 12.9,13h106.4c3.2,0 6.3,-1.2 8.6,-3.6c2.3,-2.3 3.5,-5.3 3.5,-8.5c0,-15.6 -12.7,-28.3 -28.2,-28.3h-60.6v-8.9c6.2,-0.4 11.3,-5.1 12.1,-11.3l2.1,-17.1c0.7,0 1.4,0 2.1,0c25.7,0 50.3,-5.8 73.2,-17.2c3.9,-1.9 5.4,-6.6 3.5,-10.5c-1.9,-3.9 -6.6,-5.4 -10.5,-3.5c-20.6,10.3 -42.9,15.6 -66.2,15.6c-0.1,0 -0.1,-0 -0.2,-0l0.9,-7.3c0.2,-2 0.3,-4 0.3,-5.9C263.9,401.4 284.8,389.1 299,370.8zM75.4,224c-5.5,-25.2 8.9,-50.1 32.6,-58.4l15.6,71.7H78.3L75.4,224zM125.4,364.1h11.6v8.7c0,1.4 0.1,2.8 0.3,4.2C133,373 129.1,368.6 125.4,364.1zM225.5,406.7c-0,0.9 -0,1.8 -0.1,2.7l-4.6,37.7h-33.8l-5,-36.3l-0.1,-1.1c-0.1,-1 -0.2,-2 -0.2,-3h43.9V406.7zM284.5,487.3c5.7,0 10.5,3.8 12.1,9h-99.6v-33.6h11.2v11.6c0,7.1 5.8,13 12.9,13h63.4V487.3zM225.7,391h-51c-0,0 -0.1,-0 -0.1,0h-3.7c-10,0 -18.2,-8.2 -18.2,-18.2v-8.7h112.1c4.3,0 7.8,-3.5 7.8,-7.8c0,-4.3 -3.5,-7.8 -7.8,-7.8H144.9c-0,0 -0.1,-0 -0.1,-0h-21.1c-10,0 -18.2,-8.2 -18.2,-18.2v-21.3h109.5c4.3,0 7.8,-3.5 7.8,-7.8s-3.5,-7.8 -7.8,-7.8H97.7c-0,0 -0,-0 -0.1,-0H87.3c-0.1,-0 -0.1,0 -0.2,0h-8.3c-10,0 -18.2,-8.2 -18.2,-18.2V253h11.4c0.1,0 0.1,0 0.2,0h37.2c0,0 0,0 0.1,0h23.9c0,0 0,0 0,0c0,0 0,-0 0,-0h93.6c0,0 0,-0 0,-0h73.3c9.6,0 17.4,7.8 17.4,17.4c0,33.2 -10.7,64.6 -31,90.8C272.2,379.9 249.4,391 225.7,391z"/>
+<!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportHeight="511.999"
+    android:viewportWidth="511.999">
+    <path
+        android:fillColor="#FF5845"
+        android:pathData="M386.7,61.5c0,0 41.2,-44.5 -8.3,-52.5C318.8,-0.6 262.6,51.6 286.5,91.7C286.5,91.7 332.5,48.1 386.7,61.5z" />
+    <path
+        android:fillColor="#E1E9F2"
+        android:pathData="M141.8,284.2L114.3,157.5c-0.2,-0.9 -1.1,-1.5 -2,-1.3l0,0c-31.5,6.8 -51.4,37.9 -44.6,69.4l15.5,71.3L141.8,284.2z" />
+    <path
+        android:fillColor="#B3D2F2"
+        android:pathData="M88.7,225.6c-5,-23.2 4.5,-46.2 22.5,-59.4c2.6,-1.9 3.9,-5.2 3.2,-8.4l-0.1,-0.3c-0.2,-0.9 -1.1,-1.5 -2,-1.3l0,0c-31.5,6.8 -51.4,37.9 -44.6,69.4l15.5,71.3l20,-4.3L88.7,225.6z" />
+    <path
+        android:fillColor="#E1E9F2"
+        android:pathData="M396.2,245.1v25.3c0,86.2 -69.8,156.1 -156,156.1S84.2,356.6 84.2,270.4c0,-7 2.8,-13.3 7.4,-17.9c4.6,-4.6 10.9,-7.4 17.9,-7.4h117.5l59.5,-153.4c11.1,-27.6 37.9,-45.7 67.7,-45.7c11.6,0 22.1,4.7 29.7,12.3c7.6,7.6 12.3,18.1 12.3,29.7v157.1L396.2,245.1L396.2,245.1z" />
+    <path
+        android:fillColor="#B3D2F2"
+        android:pathData="M308.6,91.7c9.5,-23.6 30.5,-40.3 55.1,-44.6c-3.1,-0.7 -6.3,-1.1 -9.5,-1.1c-29.8,0 -56.5,18.1 -67.7,45.7l-59.5,153.4h22.1L308.6,91.7z" />
+    <path
+        android:fillColor="#B3D2F2"
+        android:pathData="M106.3,270.4c0,-7 2.8,-13.3 7.4,-17.9c4.6,-4.6 10.9,-7.4 17.9,-7.4h-22.1c-7,0 -13.3,2.8 -17.9,7.4c-4.6,4.6 -7.4,10.9 -7.4,17.9c0,86.2 69.8,156.1 156,156.1c3.7,0 7.4,-0.1 11.1,-0.4C170.2,420.4 106.3,352.9 106.3,270.4z" />
+    <path
+        android:fillColor="#F2E5CB"
+        android:pathData="M396.2,101.9l63,21.3l-63.1,19.5z" />
+    <path
+        android:fillColor="#D44637"
+        android:pathData="M433.6,131.2v27.9c0,20.7 -16.8,37.5 -37.5,37.5l0,0v-53.8L433.6,131.2z" />
+    <path
+        android:fillColor="#F2E5CB"
+        android:pathData="M300.6,504.2H194.3c-2.8,0 -5.1,-2.3 -5.1,-5.1v-59.8h26.9v35.1c0,2.8 2.3,5.1 5.1,5.1h63.3c11.3,0 20.4,9.1 20.4,20.4l0,0C304.9,502.2 303,504.2 300.6,504.2z" />
+    <path
+        android:fillColor="#E1E9F2"
+        android:pathData="M174,410.8l5.5,39.7c0.3,2.5 2.5,4.4 5.1,4.4h38.6c2.6,0 4.8,-1.9 5.1,-4.5l4.9,-40.1c2.2,-17.8 -11.7,-33.5 -29.6,-33.5l0,0C185.5,376.9 171.6,392.8 174,410.8z" />
+    <path
+        android:fillColor="#B3D2F2"
+        android:pathData="M200.4,450.5l-5.5,-39.7c-2,-14.3 6.5,-27.3 19.1,-32c-3.2,-1.2 -6.8,-1.9 -10.4,-1.9l0,0c-18.1,0 -32,16 -29.5,33.9l5.5,39.7c0.3,2.5 2.5,4.4 5.1,4.4h20.9C202.9,454.9 200.7,453 200.4,450.5z" />
+    <path
+        android:fillColor="#E1E9F2"
+        android:pathData="M300.3,245.1c14,0 25.3,11.3 25.3,25.3l0,0c0,36 -12.2,69.2 -32.7,95.6c-16.1,20.8 -40.9,32.9 -67.2,32.9h-54.8c-14.4,0 -26.1,-11.7 -26.1,-26.1v-16.5h-21.1c-14.4,0 -26,-11.7 -26,-26.1v-29.2H78.8c-14.4,0 -26.1,-11.7 -26.1,-26.1v-29.9L300.3,245.1L300.3,245.1z" />
+    <path
+        android:fillColor="#B3D2F2"
+        android:pathData="M118,330.2v-29.2H99.2c-14.4,0 -26.1,-11.7 -26.1,-26.1v-29.9H52.8v29.9c0,14.4 11.7,26.1 26.1,26.1h18.8v29.2c0,14.4 11.7,26.1 26,26.1h20.4C129.7,356.3 118,344.6 118,330.2z" />
+    <path
+        android:fillColor="#B3D2F2"
+        android:pathData="M165.2,372.8v-16.5h-20.4v16.5c0,14.4 11.7,26.1 26.1,26.1h20.4C176.8,398.8 165.2,387.2 165.2,372.8z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M396.2,248.2c-4.3,0 -7.8,3.5 -7.8,7.8v14.4c0,41.5 -17.6,81.5 -48.3,109.5c-3.2,2.9 -3.4,7.9 -0.5,11.1c1.5,1.7 3.7,2.6 5.8,2.6c1.9,0 3.8,-0.7 5.3,-2.1c33.9,-31 53.4,-75.1 53.4,-121.1v-14.4C404,251.7 400.5,248.2 396.2,248.2z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M461.7,115.8l-57.8,-19.5v-8.3c0,-9.4 -2.6,-18.3 -7.4,-26.1c6.6,-8.5 17.9,-25.9 12.7,-41.1c-3.6,-10.4 -13.5,-16.9 -29.6,-19.5c-18.8,-3 -38.3,-0.6 -56.3,7.2c-16.7,7.2 -30.9,18.4 -39.9,31.7c-11.6,17.1 -13.6,35.9 -5.5,52.1l-10.6,27.3c-1.6,4 0.4,8.6 4.5,10.1c4,1.6 8.6,-0.4 10.1,-4.5l11.9,-30.5c10,-24.8 33.7,-40.8 60.4,-40.8c9.1,0 17.7,3.5 24.1,10c0.8,0.8 1.5,1.6 2.2,2.4c0.1,0.1 0.2,0.3 0.3,0.4c4.8,6 7.5,13.5 7.5,21.3v53.7l-0,1.1c0,0 0,0 0,0c0,0 0,0 0,0v53.8c0,0 0,0 0,0v18.6c0,4.3 3.5,7.8 7.8,7.8c4.3,0 7.8,-3.5 7.8,-7.8v-11.5c21.3,-3.7 37.5,-22.3 37.5,-44.6v-22.1l20.1,-6.2c3.2,-1 5.5,-4 5.5,-7.4C467.1,120 465,116.9 461.7,115.8zM433.8,122.9l-2.5,0.8c0,0 -0,0 -0,0l-27.3,8.4l0,-19.3L433.8,122.9zM354.2,38.2c-26.4,0 -50.5,12.7 -65.5,33.4c0,-9.5 4.3,-17.7 7.7,-22.7c13.7,-20.2 45.9,-37.8 80.7,-32.2c6.8,1.1 15.4,3.6 17.3,9.2c2.2,6.3 -3.1,16.5 -8.4,23.9C377.1,42.3 365.9,38.2 354.2,38.2zM425.8,159.1c0,13.6 -9.3,25.2 -21.8,28.6v-39.2l21.8,-6.7V159.1z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M363.6,94.4m-7.8,0a7.8,7.8 0,1 1,15.7 0a7.8,7.8 0,1 1,-15.7 0" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M299,370.8c22.4,-28.9 34.3,-63.7 34.3,-100.4c0,-18.3 -14.8,-33.1 -33.1,-33.1h-61.8l28.7,-73.8c1.6,-4 -0.4,-8.6 -4.5,-10.1c-4,-1.6 -8.6,0.4 -10.1,4.5l-30.9,79.5h-81.9l-18.1,-83c-0.9,-4.2 -5.1,-6.9 -9.3,-6l-1.6,0.3c-35.6,7.8 -58.3,43.1 -50.6,78.7l2.2,10h-9.5c-4.3,0 -7.8,3.5 -7.8,7.8v29.9c0,18.7 15.2,33.9 33.9,33.9h2.1c2.3,9.7 5.5,19.1 9.6,28.2c1.3,6.1 4.2,11.6 8.3,16.1c16.2,27.6 39.7,49.6 68.2,63.9l4.8,34.5c0.7,5.3 4.6,9.5 9.6,10.8v36.7c0,7.1 5.8,13 12.9,13h106.4c3.2,0 6.3,-1.2 8.6,-3.6c2.3,-2.3 3.5,-5.3 3.5,-8.5c0,-15.6 -12.7,-28.3 -28.2,-28.3h-60.6v-8.9c6.2,-0.4 11.3,-5.1 12.1,-11.3l2.1,-17.1c0.7,0 1.4,0 2.1,0c25.7,0 50.3,-5.8 73.2,-17.2c3.9,-1.9 5.4,-6.6 3.5,-10.5c-1.9,-3.9 -6.6,-5.4 -10.5,-3.5c-20.6,10.3 -42.9,15.6 -66.2,15.6c-0.1,0 -0.1,-0 -0.2,-0l0.9,-7.3c0.2,-2 0.3,-4 0.3,-5.9C263.9,401.4 284.8,389.1 299,370.8zM75.4,224c-5.5,-25.2 8.9,-50.1 32.6,-58.4l15.6,71.7H78.3L75.4,224zM125.4,364.1h11.6v8.7c0,1.4 0.1,2.8 0.3,4.2C133,373 129.1,368.6 125.4,364.1zM225.5,406.7c-0,0.9 -0,1.8 -0.1,2.7l-4.6,37.7h-33.8l-5,-36.3l-0.1,-1.1c-0.1,-1 -0.2,-2 -0.2,-3h43.9V406.7zM284.5,487.3c5.7,0 10.5,3.8 12.1,9h-99.6v-33.6h11.2v11.6c0,7.1 5.8,13 12.9,13h63.4V487.3zM225.7,391h-51c-0,0 -0.1,-0 -0.1,0h-3.7c-10,0 -18.2,-8.2 -18.2,-18.2v-8.7h112.1c4.3,0 7.8,-3.5 7.8,-7.8c0,-4.3 -3.5,-7.8 -7.8,-7.8H144.9c-0,0 -0.1,-0 -0.1,-0h-21.1c-10,0 -18.2,-8.2 -18.2,-18.2v-21.3h109.5c4.3,0 7.8,-3.5 7.8,-7.8s-3.5,-7.8 -7.8,-7.8H97.7c-0,0 -0,-0 -0.1,-0H87.3c-0.1,-0 -0.1,0 -0.2,0h-8.3c-10,0 -18.2,-8.2 -18.2,-18.2V253h11.4c0.1,0 0.1,0 0.2,0h37.2c0,0 0,0 0.1,0h23.9c0,0 0,0 0,0c0,0 0,-0 0,-0h93.6c0,0 0,-0 0,-0h73.3c9.6,0 17.4,7.8 17.4,17.4c0,33.2 -10.7,64.6 -31,90.8C272.2,379.9 249.4,391 225.7,391z" />
 </vector>
