--- a/app/src/main/res/drawable/ic_is_telecom.xml
+++ b/app/src/main/res/drawable/ic_is_telecom.xml
@@ -1,7 +1,36 @@
-<vector android:height="48dp" android:viewportHeight="490.0"
-    android:viewportWidth="490.0" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#f4d03f" android:pathData="M330.9,245.2c0,7.1 -5.8,12.9 -12.9,12.9c-7.1,0 -12.9,-5.8 -12.9,-12.9c0,-7.1 5.8,-12.9 12.9,-12.9C325.1,232.4 330.9,238.1 330.9,245.2z"/>
-    <path android:fillColor="#f4d03f" android:pathData="M184.8,245.2c0,7.1 -5.8,12.9 -12.9,12.9c-7.1,0 -12.9,-5.8 -12.9,-12.9c0,-7.1 5.8,-12.9 12.9,-12.9C179.1,232.4 184.8,238.1 184.8,245.2z"/>
-    <path android:fillColor="#f4d03f" android:pathData="M461.6,192.1c-5.7,-48.4 -27.4,-93.2 -62.3,-128.2C358,22.7 303.3,0 245,0C186.7,0 132,22.7 90.8,63.9c-35,35 -56.6,79.8 -62.3,128.2c-8.8,4.8 -14.8,14.1 -14.8,24.9v44.2c0,15.6 12.6,28.3 28.3,28.3c15.6,0 28.3,-12.7 28.3,-28.3v-44.2c0,-9.4 -4.6,-17.7 -11.6,-22.8C70.4,101.7 149.5,30.1 245,30.1c95.5,0 174.6,71.6 186.5,164c-7,5.1 -11.6,13.5 -11.6,22.8v44.2c0,15.6 12.7,28.3 28.3,28.3c15.6,0 28.3,-12.7 28.3,-28.3v-44.2C476.4,206.2 470.4,196.8 461.6,192.1z"/>
-    <path android:fillColor="#f4d03f" android:pathData="M343,338.9c37.6,-29.3 61.8,-74.9 61.8,-126.2c0,-88.1 -71.7,-159.8 -159.9,-159.8c-88.1,0 -159.8,71.7 -159.8,159.8c0,51.2 24.2,96.9 61.8,126.2C74.8,351.4 19.9,414.3 19.9,490h450.1C470.1,414.3 415.2,351.4 343,338.9zM116.8,219.1c79.5,-5 113.7,-47.9 128.2,-87.1c14.5,39.2 48.7,82.1 128.2,87.1c-1.3,25.3 -9.9,48.7 -23.7,68.1c-10.6,4.4 -22.1,6.7 -33.7,6.7h-44.1c-3.2,-4.5 -8.4,-7.4 -14.3,-7.4h-24.6c-9.6,0 -17.5,7.8 -17.5,17.5c0,9.6 7.8,17.5 17.5,17.5h24.6c5.9,0 11.1,-2.9 14.3,-7.4h44.1c2.8,0 5.6,-0.1 8.4,-0.3c-21.8,17.1 -49.3,27.4 -79.1,27.4C176.4,341 120.2,286.9 116.8,219.1zM245,420.3c-34.5,0 -63.3,-27.2 -64.7,-61.4c19.8,8.8 41.7,13.7 64.7,13.7c22.6,0 44.1,-4.7 63.7,-13.2C306.9,393.3 279.4,420.3 245,420.3z"/>
+<!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportHeight="490.0"
+    android:viewportWidth="490.0">
+    <path
+        android:fillColor="#f4d03f"
+        android:pathData="M330.9,245.2c0,7.1 -5.8,12.9 -12.9,12.9c-7.1,0 -12.9,-5.8 -12.9,-12.9c0,-7.1 5.8,-12.9 12.9,-12.9C325.1,232.4 330.9,238.1 330.9,245.2z" />
+    <path
+        android:fillColor="#f4d03f"
+        android:pathData="M184.8,245.2c0,7.1 -5.8,12.9 -12.9,12.9c-7.1,0 -12.9,-5.8 -12.9,-12.9c0,-7.1 5.8,-12.9 12.9,-12.9C179.1,232.4 184.8,238.1 184.8,245.2z" />
+    <path
+        android:fillColor="#f4d03f"
+        android:pathData="M461.6,192.1c-5.7,-48.4 -27.4,-93.2 -62.3,-128.2C358,22.7 303.3,0 245,0C186.7,0 132,22.7 90.8,63.9c-35,35 -56.6,79.8 -62.3,128.2c-8.8,4.8 -14.8,14.1 -14.8,24.9v44.2c0,15.6 12.6,28.3 28.3,28.3c15.6,0 28.3,-12.7 28.3,-28.3v-44.2c0,-9.4 -4.6,-17.7 -11.6,-22.8C70.4,101.7 149.5,30.1 245,30.1c95.5,0 174.6,71.6 186.5,164c-7,5.1 -11.6,13.5 -11.6,22.8v44.2c0,15.6 12.7,28.3 28.3,28.3c15.6,0 28.3,-12.7 28.3,-28.3v-44.2C476.4,206.2 470.4,196.8 461.6,192.1z" />
+    <path
+        android:fillColor="#f4d03f"
+        android:pathData="M343,338.9c37.6,-29.3 61.8,-74.9 61.8,-126.2c0,-88.1 -71.7,-159.8 -159.9,-159.8c-88.1,0 -159.8,71.7 -159.8,159.8c0,51.2 24.2,96.9 61.8,126.2C74.8,351.4 19.9,414.3 19.9,490h450.1C470.1,414.3 415.2,351.4 343,338.9zM116.8,219.1c79.5,-5 113.7,-47.9 128.2,-87.1c14.5,39.2 48.7,82.1 128.2,87.1c-1.3,25.3 -9.9,48.7 -23.7,68.1c-10.6,4.4 -22.1,6.7 -33.7,6.7h-44.1c-3.2,-4.5 -8.4,-7.4 -14.3,-7.4h-24.6c-9.6,0 -17.5,7.8 -17.5,17.5c0,9.6 7.8,17.5 17.5,17.5h24.6c5.9,0 11.1,-2.9 14.3,-7.4h44.1c2.8,0 5.6,-0.1 8.4,-0.3c-21.8,17.1 -49.3,27.4 -79.1,27.4C176.4,341 120.2,286.9 116.8,219.1zM245,420.3c-34.5,0 -63.3,-27.2 -64.7,-61.4c19.8,8.8 41.7,13.7 64.7,13.7c22.6,0 44.1,-4.7 63.7,-13.2C306.9,393.3 279.4,420.3 245,420.3z" />
 </vector>
