--- a/app/src/main/res/layout/activity_enroll_pmkvy_detail.xml
+++ b/app/src/main/res/layout/activity_enroll_pmkvy_detail.xml
@@ -29,6 +29,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -65,7 +66,6 @@
             android:id="@+id/accholder_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:hint="Account holder name" />
     </android.support.design.widget.TextInputLayout>
 
@@ -82,7 +82,6 @@
             android:hint="Account number" />
     </android.support.design.widget.TextInputLayout>
 
-
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_ifsccode"
         android:layout_width="match_parent"
@@ -96,12 +95,30 @@
             android:hint="IFSC code" />
     </android.support.design.widget.TextInputLayout>
 
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="?selectableItemBackground"
-        android:onClick="displaymessage"
-        android:text="submit request"
-        android:textColor="@color/colorAccent" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/prevbutton"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
+            android:onClick="previousOnClick"
+            android:text="Previous"
+            android:textColor="@color/white" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorPrimary"
+            android:onClick="displaymessage"
+            android:text="SUBMIT"
+            android:textColor="@color/white" />
+    </LinearLayout>
 </LinearLayout>
