--- a/app/src/main/res/layout/fragment_dashboard_learner.xml
+++ b/app/src/main/res/layout/fragment_dashboard_learner.xml
@@ -37,8 +37,8 @@
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:onClick="searchTrainingCourseOnClick"
-                android:foreground="?selectableItemBackground">
+                android:foreground="?selectableItemBackground"
+                android:onClick="searchTrainingCourseOnClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -58,8 +58,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:textAlignment="center"
-                        android:text="@string/drawer_item_search_courses" />
+                        android:text="@string/drawer_item_search_courses"
+                        android:textAlignment="center" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
