--- a/app/src/main/res/layout/fragment_enroll_pmkvy.xml
+++ b/app/src/main/res/layout/fragment_enroll_pmkvy.xml
@@ -1043,45 +1043,40 @@
                         app:si_no_dash="true"
                         app:si_tint_color="#2ecc71"
                         app:srcCompat="@drawable/ic_checked" />
-
                 </LinearLayout>
-
-
             </RelativeLayout>
-
-
         </android.support.v7.widget.CardView>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal"
-            android:paddingTop="5dp">
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/prevbutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="?selectableItemBackground"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorAccent"
                 android:text="Previous"
-                android:textColor="@color/colorAccent" />
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/nextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="?selectableItemBackground"
-                android:text="Next"
-                android:textColor="@color/colorAccent" />
-
-
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorPrimary"
+                android:onClick="displaymessage"
+                android:text="NEXT"
+                android:textColor="@color/white" />
         </LinearLayout>
-
-
     </LinearLayout>
 </ScrollView>
