--- a/app/src/main/res/layout/fragment_search_training_course.xml
+++ b/app/src/main/res/layout/fragment_search_training_course.xml
@@ -1,4 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,8 +37,8 @@
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:onClick="searchSectorAgriculture"
-                android:foreground="?selectableItemBackground">
+                android:foreground="?selectableItemBackground"
+                android:onClick="searchSectorAgriculture">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -168,8 +185,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:textAlignment="center"
-                        android:text="@string/sector_handloom" />
+                        android:text="@string/sector_handloom"
+                        android:textAlignment="center" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -312,9 +329,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:onClick="searchSectorAgriculture"
                     android:foreground="?selectableItemBackground"
                     android:gravity="center"
+                    android:onClick="searchSectorAgriculture"
                     android:orientation="vertical">
 
                     <ImageView
