--- a/app/src/main/res/layout/fragment_dashboard_trainer.xml
+++ b/app/src/main/res/layout/fragment_dashboard_trainer.xml
@@ -22,7 +22,8 @@
     android:layout_marginBottom="80dp">
 
     <LinearLayout
-        android:id="@+id/events_root_ll"
+        android:layout_margin="8dp"
+        android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
