--- a/app/src/main/res/layout/fragment_dashboard_trainer.xml
+++ b/app/src/main/res/layout/fragment_dashboard_trainer.xml
@@ -22,10 +22,10 @@
     android:layout_marginBottom="80dp">
 
     <LinearLayout
-        android:layout_margin="8dp"
-        android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -37,7 +37,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:foreground="?selectableItemBackground"
+                android:onClick="searchTrainingCenterOnClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
