--- a/app/src/main/res/layout/fragment_sector_agriculture.xml
+++ b/app/src/main/res/layout/fragment_sector_agriculture.xml
@@ -36,7 +36,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:onClick="husbandry"
+                android:foreground="?selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
